# django-stator

./: .pre-commit-config.yaml  README.md  pyproject.toml
django_stator/: exceptions.py  graph.py  models.py  runner.py  timer.py
django_stator/management/commands/: runstator.py
tests/: test_model.py  test_runner.py
tests/testapp/: models.py  settings.py
